# webgpu-cpp-wasm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-native.yml  deploy-page.yml
cmake/: EmbedFile.cmake  FetchDawn.cmake  FetchSDL2WebGPU.cmake  glm.cmake  patch_dawn_gcc.cmake  tbb.cmake  uWebSockets.cmake
dev/: patch_worker_import.sh
src/: CMakeLists.txt  main.cpp  sdl2webgpu.c  sdl2webgpu.h  webgpu_cpp.h
web/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.ts  main.cpp  wasm.d.ts
ws_server/: CMakeLists.txt  oatpp_controller.h  oatpp_ws_listener.cpp  oatpp_ws_listener.h  ws_server.cpp
